--- a/ProjectCDTT_63132701/Views/tai_khoan/ResetPassword.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/ResetPassword.cshtml
@@ -23,8 +23,8 @@
                 @using (Html.BeginForm("ResetPassword", "tai_khoan", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
-                    @Html.Hidden("email", (string)ViewBag.Email)
-                    @Html.Hidden("token", (string)ViewBag.Token)
+                    @Html.Hidden("email", (string)ViewBag.Email) //Dùng Hidden để giữ email và token trong form
+                    @Html.Hidden("token", (string)ViewBag.Token)//nhằm xác thực người dùng.
 
                     <div class="form-group">
                         <label>Mật khẩu mới:</label>
