--- a/ProjectCDTT_63132701/Views/Van_chuyen/QLVC.cshtml
+++ b/ProjectCDTT_63132701/Views/Van_chuyen/QLVC.cshtml
@@ -41,14 +41,29 @@
                 <td>@Html.DisplayFor(modelItem => item.QuanHuyen)</td>
                 <td>@Html.DisplayFor(modelItem => item.PhuongXa)</td>
                 <td>@Html.DisplayFor(modelItem => item.DiaChiChiTiet)</td>
-                <td>@Html.DisplayFor(modelItem => item.TrangThai)</td>
+                <td>
+                    @if (item.TrangThai == "Pending")
+                    {
+                        @:Chưa duyệt
+                    }
+                    else if (item.TrangThai == "Shipping")
+                    {
+                        @:Chờ Vận chuyển
+                    }
+                    else
+                    {
+                        @Html.DisplayFor(modelItem => item.TrangThai)
+                    }
+                </td>
+
                 <td>@Html.DisplayFor(modelItem => item.DonViVanChuyen)</td>
                 <td>@String.Format("{0:N0} đ", item.GiaVanChuyen)</td>
+
                 <td>
                     <a href="@Url.Action("Details", new { id = item.MaVanChuyen })" class="btn btn-info btn-sm" title="Xem chi tiết">
                         <i class="fas fa-eye"></i>
                     </a>
-                    <a href="@Url.Action("Edit", "Van_chuyen", new { id = item.MaVanChuyen })" class="btn btn-warning btn-sm" title="Chỉnh sửa">
+                    <a href="@Url.Action("Edit", new { id = item.MaVanChuyen })" class="btn btn-warning btn-sm" title="Chỉnh sửa">
                         <i class="fas fa-edit"></i>
                     </a>
                     <a href="@Url.Action("Delete", new { id = item.MaVanChuyen })" class="btn btn-danger btn-sm" title="Xóa" onclick="return confirm('Bạn có chắc muốn xóa sản phẩm này?');">
