--- a/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/ChiTietSanPham.cshtml
@@ -14,7 +14,7 @@
 
 <div class="product-detail">
     <a href="javascript:history.back()" class="back-button">
-        <i class="fa-solid fa-chevron-left"></i> Quay lại
+        <i class="fa-solid fa-arrow-left"></i>
     </a>
     <div class="product-image">
         <img src="@Url.Content("~/Images/" + Model.AnhSanPham)" alt="@Model.TenSP">
