--- a/ProjectCDTT_63132701/Views/van_chuyen/Delete.cshtml
+++ b/ProjectCDTT_63132701/Views/van_chuyen/Delete.cshtml
@@ -38,7 +38,7 @@
                 <dd class="col-sm-9">@Model.DonHang?.TrangThai</dd>
             </dl>
 
-            @using (Html.BeginForm("Delete", "VanChuyen", FormMethod.Post))
+            @using (Html.BeginForm("Delete", "Van_chuyen", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(model => model.MaVanChuyen)
