--- a/ProjectCDTT_63132701/Views/khach_hang/Edit.cshtml
+++ b/ProjectCDTT_63132701/Views/khach_hang/Edit.cshtml
@@ -84,7 +84,7 @@
                     <div class="modal-body"></div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
-                        <button type="button" id="btnConfirmOrder" class="btn btn-primary">Xác nhận</button>
+                        <button type="button" id="btnConfirmOrder" class="btn modal-btn">Xác nhận</button>
                     </div>
                 </div>
             </div>
