--- a/ProjectCDTT_63132701/Views/san_pham/LoaiBac.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/LoaiBac.cshtml
@@ -17,7 +17,7 @@
             <img src="~/Images/mau21.jpg" alt="Ảnh minh họa bạc Ý" />
         </div>
         <div class="noi-dung">
-            <p><strong>Bạc Ý (Bạc Italy)</strong></p>
+            <p><strong>Bạc Ý (Sterling Silver Italy)</strong></p>
             <p>
                 Bạc Ý (Bạc Italy) là một trong những loại bạc cao cấp nhất trên thị trường trang sức.
                 Nó được sản xuất ở Ý hoặc theo công nghệ của Ý và được chứng nhận bởi Tổ chức Giám định Bạc Ý (Assayeria di Stato).
@@ -31,7 +31,7 @@
 
     <div class="thong-tin">
         <div class="noi-dung">
-            <p><strong>Bạc Thái</strong></p>
+            <p><strong>Bạc Thái (Bạc 925)</strong></p>
             <p>
                 Bạc Thái là thuật ngữ chỉ đến bạc sản xuất tại Thái Lan hoặc theo công nghệ của Thái Lan. Bạc Thái được sản xuất với nhiều kiểu dáng và kỹ thuật khác nhau, từ những món trang sức đơn giản cho đến những món đắt giá và được xem là một trong những loại bạc có chất lượng tốt trên thị trường.
                 Bạc Thái có thành phần hợp chất tương tự như bạc S925, bao gồm: 92,5% bạc nguyên chất, 7,5% là hỗn hợp các kim loại khác để tăng thêm độ cứng và độ bóng.
