--- a/ProjectCDTT_63132701/Views/tai_khoan/ForgotPassword.cshtml
+++ b/ProjectCDTT_63132701/Views/tai_khoan/ForgotPassword.cshtml
@@ -32,11 +32,32 @@
                     </div>
                 }
 
-                @if (ViewBag.Message != null)
-                {
-                    <p style="color: green">@ViewBag.Message</p>
-                }
+
             </div>
         </div>
     </div>
 </div>
+@section Scripts {
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
+
+    <script>
+        toastr.options = {
+            "closeButton": true,
+            "progressBar": true,
+            "positionClass": "toast-bottom-right",
+            "timeOut": 4000
+        };
+
+        @if (ViewBag.Message != null)
+        {
+            <text>toastr.success("@ViewBag.Message");</text>
+        }
+        else if (TempData["Error"] != null)
+        {
+            <text>toastr.error("@TempData["Error"]");</text>
+        }
+    </script>
+}
+
+}
