--- a/ProjectCDTT_63132701/Content/donhang.css
+++ b/ProjectCDTT_63132701/Content/donhang.css
@@ -21,3 +21,16 @@
 .back-button:hover {
     color: #000;
 }
+.modal-btn {
+    background-color: #F7858F;
+    color: white;
+    border: none;
+    padding: 8px 20px;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+}
+
+    .modal-btn:hover {
+        background-color: #e06c78;
+        color: white;
+    }
