--- a/ProjectCDTT_63132701/Content/giohang.css
+++ b/ProjectCDTT_63132701/Content/giohang.css
@@ -197,3 +197,16 @@ h2 {
     text-align: center;
     padding: 50px 0;
 }
+.modal-btn {
+    background-color: #F7858F;
+    color: white;
+    border: none;
+    padding: 8px 20px;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+}
+
+    .modal-btn:hover {
+        background-color: #e06c78;
+        color: white;
+    }
