--- a/ProjectCDTT_63132701/Views/khach_hang/EditProfile.cshtml
+++ b/ProjectCDTT_63132701/Views/khach_hang/EditProfile.cshtml
@@ -8,11 +8,9 @@
 <head>
     <link rel="stylesheet" href="~/Content/login.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <div class="login-wrapper">
@@ -26,20 +24,21 @@
         <div class="login-right">
             <div class="login-form-wrapper">
                 <h5>Cập nhật thông tin của khách hàng: @Model.HoTen</h5>
-                @using (Html.BeginForm())
+                @using (Html.BeginForm("EditProfile", "Khach_hang", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
+                    @Html.HiddenFor(model => model.MaKH)
 
                     <div class="row">
                         <!-- Cột trái -->
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="form-group mb-3">
                                 <label for="HoTen">Họ và Tên</label>
                                 @Html.TextBoxFor(model => model.HoTen, new { @class = "form-control", @readonly = "readonly", id = "HoTen" })
                                 @Html.ValidationMessageFor(model => model.HoTen, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group mb-3">
                                 <label for="Email">Email</label>
                                 @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @readonly = "readonly", id = "Email" })
                                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
@@ -48,13 +47,13 @@
 
                         <!-- Cột phải -->
                         <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="form-group mb-3">
                                 <label for="SoDienThoai">Số Điện Thoại</label>
                                 @Html.TextBoxFor(model => model.SoDienThoai, new { @class = "form-control", @readonly = "readonly", id = "SoDienThoai" })
                                 @Html.ValidationMessageFor(model => model.SoDienThoai, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group mb-3">
                                 <label for="DiaChi">Địa Chỉ</label>
                                 @Html.TextBoxFor(model => model.DiaChi, new { @class = "form-control", @readonly = "readonly", id = "DiaChi" })
                                 @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
@@ -63,7 +62,7 @@
                     </div>
 
                     <div class="button-container mt-3">
-                        <button type="button" id="btnEdit" class="btn btn-login ">Chỉnh sửa</button>
+                        <button type="button" id="btnEdit" class="btn btn-login">Chỉnh sửa</button>
                         <button type="submit" id="btnSave" class="btn btn-login d-none">Lưu</button>
                     </div>
                 }
@@ -71,16 +70,17 @@
         </div>
     </div>
 </div>
+
 <script>
     $(document).ready(function () {
         $('#btnEdit').on('click', function () {
-            $('#HoTen, #SoDienThoai, #DiaChi').prop('readonly', false);
+            $('#HoTen, #SoDienThoai, #DiaChi').prop('readonly', false); // đúng chuẩn hơn .removeAttr()
             $('#btnEdit').addClass('d-none');
             $('#btnSave').removeClass('d-none');
         });
     });
-
 </script>
+
 @section Scripts {
     <script>
         $(document).ready(function () {
