--- a/ProjectCDTT_63132701/Views/san_pham/Day_Chuyen.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/Day_Chuyen.cshtml
@@ -7,6 +7,7 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="~/Content/sanpham.css">
+    <link rel="stylesheet" href="~/Content/create.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
@@ -55,7 +56,7 @@
                     <option value="gia-thap" @(Request["sapXep"] == "gia-thap" ? "selected" : "")>Giá thấp nhất</option>
                 </select>
             </div>
-            <button type="submit" class="btn btn-light">Lọc</button>
+            <button type="submit" class="btn modal-btn">Lọc</button>
         </div>
     }
 
