--- a/ProjectCDTT_63132701/Views/san_pham/QLSP.cshtml
+++ b/ProjectCDTT_63132701/Views/san_pham/QLSP.cshtml
@@ -29,8 +29,8 @@
             <th>Mô tả</th>
             <th>Đơn giá</th>
             <th>Loại sản phẩm</th>
-            @*            <th>Trạng thái </th>
-                <th></th>*@
+            <th>Hành động  </th>
+              
 
         </tr>
     </thead>
